--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Mohamed Ali | Portfolio</title>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="portfolio.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
